modified about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by danijel - About weather</p>
         <img class="portrait" src="img/pic.jpg" />
     </div>
 
