--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by danijel - About weather</p>
-        <img class="portrait" src="img/pic.jpg" />
+        <img class="portrait" src="/img/pic.jpg" />
     </div>
 
     {{>footer}}
